Added support for uploading gifs/short videos

--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,5 @@
 
 	"offline_enabled": false,
 
-	"permissions": [ "contextMenus", "storage" ]
+	"permissions": [ "contextMenus", "storage", "tabs" ]
 }
